@@ -6,6 +6,7 @@ Overview of changes in lightdm 0.9.3
     * Set XDG_SEAT_PATH and XDG_SESSION_PATH environment variables for sessions.
     * Always set XAUTHORITY environment variable so sudo keeps accessing the
       correct X authority.
+    * Connect up lightdm_user_get_logged_in in liblightdm-gobject
 
 Overview of changes in lightdm 0.9.2
 
